--- a/src/resources/views/courses/create.hbs
+++ b/src/resources/views/courses/create.hbs
@@ -4,7 +4,7 @@
     <form class="mt-4" method="post" action="/courses/store">
         <div class="form-group">
             <label for="name">Tên:</label>
-            <input type="text" class="form-control" id="name" name="name" required>
+            <input type="text" class="form-control" id="name" name="name">
         </div>
         <div class="form-group">
             <label for="description">Mô tả:</label>
@@ -12,16 +12,12 @@
         </div>
         <div class="form-group">
             <label for="videoId">Video Id:</label>
-            <input type="text" class="form-control" id="videoId" name="videoId" required>
+            <input type="text" class="form-control" id="videoId" name="videoId">
         </div>
         <div class="form-group">
             <label for="level">Trình độ:</label>
             <input type="text" class="form-control" id="level" name="level">
         </div>
-        {{!-- <div class="form-group">
-            <label for="slug">Slug:</label>
-            <input type="text" class="form-control" id="slug" name="slug" required>
-        </div> --}}
         <button type="submit" class="btn btn-primary">Thêm khóa học</button>
     </form>
 </div>
