--- a/src/resources/views/partials/header.hbs
+++ b/src/resources/views/partials/header.hbs
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-md bg-dark navbar-dark">
   <div class="container">
     <!-- Brand -->
-    <a class="navbar-brand" href="#">OptimusFaker</a>
+    <a class="navbar-brand" href="/">OptimusFaker</a>
 
     <!-- Toggler/collapsibe Button -->
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
