--- a/src/resources/views/courses/create.hbs
+++ b/src/resources/views/courses/create.hbs
@@ -1,7 +1,7 @@
 <div class="mt-4">
     <h3>Đăng khóa học</h3>
 
-    <form class="mt-4" method="post" action="/courses/store">
+    <form class="mt-4" method="POST" action="/courses/store">
         <div class="form-group">
             <label for="name">Tên:</label>
             <input type="text" class="form-control" id="name" name="name">
